Se hace la coneccion de la plantilla home.html con el proyecto

--- a/django-practice3/personas/templates/home.html
+++ b/django-practice3/personas/templates/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-
-<head></head>
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 <body>
-  <h1>Probando plantillas con django</h1>
+  <h1>Probando plantillas</h1>
 </body>
-<html>  <h1>Probando plantillas con django</h1>
-</body>
-<html>
+</html>
