--- a/django-practice3/personas/templates/home.html
+++ b/django-practice3/personas/templates/home.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1>Probando plantillas</h1>
+  {% block content %}
+  <p>
+    {{mytext}}
+    {{mynumber}}
+  </p>
+  {% endblock %}
 </body>
+
 </html>
