Pruebo el tag for en home.html

--- a/django-practice3/personas/templates/home.html
+++ b/django-practice3/personas/templates/home.html
@@ -13,6 +13,9 @@
   <p>
     {{mytext}}
     {{mynumber}}
+    {% for myitem in mylist %}
+    <li>{{ myitem }}</li>
+    {% endfor %}
   </p>
   {% endblock %}
 </body>
