Se usa de otra plantilla para mostrar los datos de la persona, La app personas, ya estaba independizada

--- a/django-practice3/personas/templates/home.html
+++ b/django-practice3/personas/templates/home.html
@@ -11,7 +11,7 @@
   <h1>Probando plantillas</h1>
   {% block content %}
   <p>
-    {{mytext}}
+    {{mytext|upper}}
     {{mynumber}}
     {% for myitem in mylist %}
     <li>{{forloop.counter}} - {{ myitem }}</li>
