--- a/django-practice3/personas/templates/personasLista.html
+++ b/django-practice3/personas/templates/personasLista.html
@@ -9,7 +9,7 @@
     {% block content %}
     <main>
         {% for instance in objectList %}
-        <p>{{instance.id}} - {{instance.nombre}}</p>
+        <p>{{instance.id}} - <a href='{{ instance.get_absolute_url }}'>{{instance.nombre}}</a></p>
         {% endfor%}
     </main>
     {% endblock %}
